GNOME Bugzilla – Bug 742082
Easytag can't erase disk number tag in mp3 files
Last modified: 2014-12-29 11:50:07 UTC
1. Select an mp3 file with a disk number tag. 2. Delete the value in the disk number tag. 3. Save the changes. 4. Open the file with a media player or even reload it into easy tag. Disk number tag is back. This doesn't happen with any other tag as far as I can tell. Comments, for instance, delete normally. You can *sort* of work around it by putting 0 in the field, but it's not really the same thing. Doesn't happen with Vorbis tags. Don't have any aac files to test it on.
This only seems to be the case when writing ID3v2.4 tags (not ID3v2.3), which allowed me to narrow down the problem to an erroneous check added when validating TPOS fields in ID3 tags (so that they only contained digits and the '/' character). Fixed in master and easytag-2-2 branches as 551629c3f63c071122a5fadb012f8ce37821111e and 660b3f93a64c64330517a5fc060df07760f6a5c7. Thanks for the bug report!